--- a/src/assets/theme/theme-darkblue/index.css
+++ b/src/assets/theme/theme-darkblue/index.css
@@ -440,7 +440,7 @@
     left: 50%;
     -ms-transform: translateX(-50%);
     transform: translateX(-50%);
-    background: #fff;
+    background: #101010;
     border-radius: 2px;
     box-shadow: 0 1px 3px rgba(0, 0, 0, .3);
     box-sizing: border-box
@@ -497,12 +497,12 @@
     line-height: 1;
     font-size: 16px;
     font-weight: 700;
-    color: rgb(31, 45, 61)
+    color: #fff
 }
 
 .el-dialog__body {
     padding: 30px 20px;
-    color: #C5CFE9;
+    color: #101010;
     font-size: 14px
 }
 
